--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "fsevents": "^2.3.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^2.1.3",
     "react-speech-kit": "^2.0.2",
     "speak-tts": "^2.0.8"
   },
